--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Tracker</title>
     <script>
-      if (
-        localStorage.theme === "dark" ||
-        window.matchMedia("(prefers-color-scheme: dark)").matches
-      ) {
-        localStorage.theme = "dark";
+      // preferedTheme is theme they choose to prefer with the theme togle
+      // theme is the current active theme (e.g. system default is dark but user did not set prefered them)
+      if (localStorage.preferedTheme === "dark") {
         document.querySelector("html").dataset.theme = "dark";
+      } else if (localStorage.preferedTheme === "light") {
+        document.querySelector("html").dataset.theme = "light";
+      } else if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        localStorage.theme = "dark";
       } else {
         localStorage.theme = "light";
-        document.querySelector("html").dataset.theme = "light";
       }
     </script>
   </head>
